# ws-markdown-server

./: .dockerignore  Cargo.toml  Dockerfile  README.md  deploy-server.sh  nginx.conf
.github/workflows/: gh-pages.yml
src/: main.rs
terraform/: .gitignore  clusters.tf  lb.tf  main.tf  networks.tf  roles.tf  services.tf  tasks.tf  terraform.tfvars.sample  variables.tf
usage/client/: .env  env.sample  index.html  package-lock.json  package.json  vite.config.js
usage/client/src/: App.svelte  app.css
usage/client/src/lib/: MarkdownToHtml.svelte  stores.js
