[package]
name = "ws-markdown-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = { version = "0.15.0", default-features = false, features = ["syntect"] }
futures-util = "0.3.25"
tokio = { version = "1.24.1", features = ["rt", "rt-multi-thread", "tokio-macros", "full"] }
tokio-tungstenite = "0.18.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
