[package]
name = "ws-markdown-server"
version = "1.0.0"
edition = "2021"
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
description = "A simple Websocket (as well as a Unix socket) server that serves on-the-fly compilation of Markdown to HTML."
homepage = "https://github.com/aalekhpatel07/ws-markdown-server"
documentation = "https://docs.rs/ws-markdown-server/1.0.0"
readme = "./README.md"
repository = "https://github.com/aalekhpatel07/ws-markdown-server"
license-file = "./LICENSE.md"
license = "GPL3"
keywords = ["websocket-server", "markdown", "markdown-server", "tokio", "comrak"]
categories = ["web-programming::websocket"]
exclude = ["usage/", ".dockerignore", ".gitignore", "Dockerfile"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive", "env"]}
comrak = { version = "0.15.0", default-features = false, features = ["syntect"] }
futures-util = "0.3.25"
tokio = { version = "1.24.1", features = ["rt", "rt-multi-thread", "tokio-macros", "full"] }
tokio-tungstenite = "0.18.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[profile.release]
lto = "fat"
